# Query_Processor

./: CMakeLists.txt  README.md  SPEC.md
data/: testings.csv  testings.schema.json
plans/: query_active_customers.json  query_discounted_balance.json  query_high_balance.json  query_limit_customers.json
query/: generate_benchmark.py
query/new/: customers.csv
query/old_query/: query_tpch_query1.json
src/: catalog.h  expression.h  main.cpp  operator.h  plan_parser.h  types.h
